--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -5,7 +5,7 @@
 - @ungraded_submissions_by_assignment.each do |assignment, submissions|
   %h4.assignment_name
     = link_to assignment.name, assignment
-    = link_to raw("<i class='fa fa-check fa-fw'></i> Quick Grade"), mass_grade_assignment_path(assignment), :class => "button"
+    = link_to glyph(:check) + "Quick Grade", mass_grade_assignment_path(assignment), :class => "button"
   %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
@@ -37,14 +37,14 @@
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(ug_assignment, :id => ug.id), :class => "button"
-                    %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
+                    %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(ug_assignment, :id => ug.id), :class => "button"
+                    %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
             - elsif ug_assignment.has_groups?
               %td= link_to ug_group.try(:name), group_path(ug_group)
               %td= ug.updated_at
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(ug_assignment.id, :id => ug.id), :class => 'button'
-                    %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(ug_assignment, :group_id => ug_group), :class => "button"
+                    %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(ug_assignment.id, :id => ug.id), :class => 'button'
+                    %li= link_to glyph(:check) + "Grade", group_grade_assignment_path(ug_assignment, :group_id => ug_group), :class => "button"
   %hr.dotted
