--- a/app/views/info/_unreleased_grades_table.haml
+++ b/app/views/info/_unreleased_grades_table.haml
@@ -7,9 +7,9 @@
     %h4.assignment_name
       = link_to assignment.name, assignment
       - if assignment.is_individual?
-        = link_to raw("<i class='fa fa-check fa-fw'></i> Quick Grade"), mass_grade_assignment_path(assignment), :class => "button"
+        = link_to glyph(:check) + "Quick Grade", mass_grade_assignment_path(assignment), :class => "button"
       - else
-        = link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), assignment, :class => "button"
+        = link_to glyph(:check) + Grade", assignment, :class => "button"
 
     = form_tag edit_status_grades_assignment_path(assignment), method: :get do
       %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "unreleasedTableCaption"}
@@ -56,8 +56,8 @@
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
-                    %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
+                    %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
+                    %li= link_to glyph(:edit) + "Edit", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
               %td
                 .center
                   %label
