--- a/app/views/info/choices.html.haml
+++ b/app/views/info/choices.html.haml
@@ -4,7 +4,7 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   - if current_course.has_teams?
     .team-filter
       = form_tag multiplier_choices_path, :name => "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
@@ -35,4 +35,4 @@
           %td
             .right
               %ul.button-bar
-                %li= link_to raw("<i class='fa fa-edit fa-fw'></i> <span class='hide-for-small'>Edit #{term_for :weights}</span>"), assignment_type_weights_path(:student_id => student.id), :class => "button"
+                %li= link_to glyph(:edit) + "Edit #{term_for :weights}", assignment_type_weights_path(:student_id => student.id), :class => "button"
