--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -49,8 +49,8 @@
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(re.assignment, :id => re.id), :class => "button"
-                    %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => re.student.try(:id)), :class => "button"
+                    %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment, :id => re.id), :class => "button"
+                    %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => re.student.try(:id)), :class => "button"
             - elsif re.assignment.has_groups?
               %td= link_to re.group.try(:name), group_path(:id => re.group.id)
               %td
@@ -60,5 +60,5 @@
                 .right
                   %ul.button-bar
                     %li= link_to re.group.try(:name), group_path(re.group)
-                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(re.assignment.id, :id => re.id), :class => "button"
-              %td= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(re.assignment, :group_id => re.group), :class => "button"
+                    %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment.id, :id => re.id), :class => "button"
+              %td= link_to glyph(:check) + "Grade", group_grade_assignment_path(re.assignment, :group_id => re.group), :class => "button"
