--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -41,8 +41,8 @@
             .right
               %ul.button-bar
                 - if submission.assignment.is_individual?
-                  %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
-                  %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id => submission.assignment.id, :student_id => submission.student.try(:id)), :class => "button"
+                  %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
+                  %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(:assignment_id => submission.assignment.id, :student_id => submission.student.try(:id)), :class => "button"
                 - else
-                  %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
-                  %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(submission.assignment, :group_id => submission.group), :class => "button"
+                  %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
+                  %li= link_to glyph(:check) + Grade", group_grade_assignment_path(submission.assignment, :group_id => submission.group), :class => "button"
