--- a/app/views/layouts/navigation/_account_info.haml
+++ b/app/views/layouts/navigation/_account_info.haml
@@ -1,2 +1,2 @@
-%li= link_to raw("<i class ='fa fa-rocket fa-fw'></i> My Account"), edit_profile_users_path
-%li= link_to raw("<i class ='fa fa-sign-out fa-fw'></i> Logout"), :logout
+%li= link_to glyph(:rocket) + "My Account", edit_profile_users_path
+%li= link_to glyph("sign-out") + "Logout", :logout
