--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -75,34 +75,33 @@
     %li= link_to glyph("th-large") + "#{term_for :assignment_type } Summaries", export_all_scores_assignment_types_path(format: 'csv')
 
     - if current_course.has_badges?
-      %li
-        %a{:href => export_earned_badges_path(format: 'csv')} <i class="fa fa-certificate fa-fw"></i> Awarded #{current_course.badge_term.pluralize}
+      %li= link_to glyph(:certificate) + "Awarded #{current_course.badge_term.pluralize}",  export_earned_badges_path(format: 'csv')
 
-    %li= link_to_unless_current raw("<i class='fa  fa-fw'></i> #{term_for :assignment} Structure"), export_structure_assignments_path(format: 'csv')
+    %li= link_to_unless_current glyph("") + "#{term_for :assignment} Structure", export_structure_assignments_path(format: 'csv')
 
 %hr
 
 %h5 Users
-%li= link_to_unless_current raw("<i class='fa fa-user fa-fw'></i> #{term_for :students}"), students_path
-%li= link_to_unless_current raw("<i class='fa fa-flag fa-fw'></i> Flagged #{term_for :students}"), flagged_students_path
+%li= link_to_unless_current glyph(:user) + "#{term_for :students}", students_path
+%li= link_to_unless_current glyph(:flag) + "Flagged #{term_for :students}", flagged_students_path
 - if current_course.has_teams?
-  %li= link_to_unless_current raw("<i class='fa fa-users fa-fw'></i> #{term_for :teams}"), teams_path
+  %li= link_to_unless_current glyph(:users) + "#{term_for :teams}", teams_path
 %li
-  = link_to_unless_current raw("<i class='fa fa-user-plus fa-fw'></i> #{term_for :groups}"), groups_path do |name|
+  = link_to_unless_current glyph("user-plus") + "#{term_for :groups}", groups_path do |name|
     = raw("<span class='sidebar-nav'>#{name}</span>")
   - if current_course.groups_to_review_count > 0
     %div.notification-badge.staff-notification-badge= current_course.groups_to_review_count
-%li= link_to_unless_current raw('<i class="fa fa-user-secret fa-fw"></i> Staff'), staff_index_path
+%li= link_to_unless_current glyph("user-secret") + 'Staff', staff_index_path
 
 %hr
 
 %h5 Course Setup
-%li= link_to_unless_current raw('<i class="fa fa-cog fa-fw"></i> Options'), edit_course_path(current_course)
-%li= link_to_unless_current raw("<i class='fa fa-book fa-fw'></i> #{term_for :assignment_types}"), assignment_types_path
-%li= link_to_unless_current raw('<i class="fa fa-sliders fa-fw"></i> Predictor Preview'), predictor_path
-%li= link_to_unless_current raw('<i class="fa fa-level-up fa-fw"></i> Grading Scheme'), grade_scheme_elements_path
-%li= link_to_unless_current raw('<i class="fa fa-bullhorn fa-fw"></i> Announcements'), announcements_path
-%li= link_to_unless_current raw('<i class="fa fa-calendar fa-fw"></i> Calendar Events'), events_path
+%li= link_to_unless_current glyph(:cog) + 'Options', edit_course_path(current_course)
+%li= link_to_unless_current glyph(:book) + "#{term_for :assignment_types}", assignment_types_path
+%li= link_to_unless_current glyph(:sliders) + "Predictor Preview", predictor_path
+%li= link_to_unless_current glyph("level-up") + "Grading Scheme", grade_scheme_elements_path
+%li= link_to_unless_current glyph(:bullhorn) + "Announcements", announcements_path
+%li= link_to_unless_current glyph(:calendar) + "Calendar Events", events_path
 
 
 - if LTIProvider.present?
@@ -111,15 +110,15 @@
 
     %h5 Tools
     - LTIProvider.all.each do |tool|
-      %li= link_to_unless_current raw("<i class='fa fa-external-link-square fa-fw'></i> #{tool.name}"), launch_lti_provider_path(tool)
+      %li= link_to_unless_current glyph("external-link-square") + "#{tool.name}", launch_lti_provider_path(tool)
 
 .hide-for-small
   %hr
 
   %h5{ class: "make-lizards" } Admin
-  %li= link_to_unless_current raw('<i class="fa fa-university fa-fw"></i> My Courses'), courses_path
+  %li= link_to_unless_current glyph(:university) + "My Courses", courses_path
 
   - if current_user_is_admin?
-    %li= link_to_unless_current raw('<i class="fa fa-user-times fa-fw"></i> All Users'), users_path
-    %li= link_to_unless_current raw('<i class="fa fa-check-square-o fa-fw"></i> Predictor Settings'), predictor_settings_course_path(current_course)
-    %li= link_to_unless_current raw('<i class="fa fa-photo fa-fw"></i> Timeline Settings'), timeline_settings_course_path(current_course)
+    %li= link_to_unless_current glyph("user-times") + "All Users", users_path
+    %li= link_to_unless_current glyph("check-square-o") + "Predictor Settings", predictor_settings_course_path(current_course)
+    %li= link_to_unless_current glyph(:photo) + "Timeline Settings", timeline_settings_course_path(current_course)
