--- a/app/views/staff/_buttons.haml
+++ b/app/views/staff/_buttons.haml
@@ -1,6 +1,6 @@
 .context_menu
   %ul
-    %li= link_to_unless_current raw("<i class='fa fa-plus fa-fw'></i> New User"), new_user_path
+    %li= link_to_unless_current glyph(:plus) + "New User", new_user_path
     - if @staff_member.present?
-      %li= link_to_unless_current raw("<i class='fa fa-edit fa-fw'></i> Edit Staff Member"), edit_user_path(@staff_member)
-      %li= link_to_unless_current raw("<i class='fa fa-list fa-fw'></i> Show Staff Member"), staff_path(@staff_member)
+      %li= link_to_unless_current glyph(:edit) + "Edit Staff Member", edit_user_path(@staff_member)
+      %li= link_to_unless_current glyph(:list) + "Show Staff Member", staff_path(@staff_member)
