--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -12,7 +12,6 @@
           .sr-only Select #{term_for :team}
         = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
-
   %table.nofeatures_default_rank_dynatable
     %thead
       %tr
@@ -56,5 +55,5 @@
             %td{"data-title" => "Options"}
               .right
                 %ul.button-bar
-                  %li= mail_to student.email, raw('<i class="fa fa-envelope fa-fw"></i> Email'), :class => "button"
-                  %li= link_to raw('<i class="fa fa-edit fa-fw"></i> Edit'), edit_user_path(student), :class => "button"
+                  %li= mail_to student.email, glyph(:envelope) + "Email", :class => "button"
+                  %li= link_to glyph(:edit) + "Edit", edit_user_path(student), :class => "button"
