--- a/app/views/students/sidebar/_sidebar_avatar.haml
+++ b/app/views/students/sidebar/_sidebar_avatar.haml
@@ -10,7 +10,7 @@
   .italic= "#{current_student.team_for_course(current_course).name}" if current_student.team_for_course(current_course).present?
   .italic= "Last activity: #{current_student.try(:last_activity_at) || "(never)"} "
   %ul
-    %li= link_to raw('<i class="fa fa-edit fa-fw"></i> Edit'), edit_user_path(current_student), :class => "button"
-    %li= link_to raw('<i class="fa fa-envelope fa-fw"></i> Email'), "mailto:#{current_student.email}", :class => "button"
+    %li= link_to glyph(:edit) + "Edit", edit_user_path(current_student), :class => "button"
+    %li= link_to glyph(:envelope) + "Email", "mailto:#{current_student.email}", :class => "button"
     - if current_user_is_admin?
       %li= link_to "Recalculate Score", student_recalculate_path(:student_id => current_student.id), :class => "button"
