--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -1,7 +1,7 @@
 - if current_course.team_challenges? && current_course.add_team_score_to_student? && current_student.team_for_course(current_course).present?
   .challenge
 
-    %h3.collapse 
+    %h3.collapse
       %a
         %i.fa.fa-angle-double-right.fa-fw
       #{term_for :challenges} #{ points @student.team_for_course(current_course).challenge_grade_score }/#{points current_course.point_total_for_challenges}
@@ -25,15 +25,15 @@
                 %span.italic= "#{points challenge.point_total} points possible"
             %td{:width => "25%"}
               - if challenge.future?
-                = "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"     
+                = "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
               - else
-                %span       
+                %span
             - if current_user_is_staff?
               %td
                 .right
                   %ul.button-bar
                     - if challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).present?
-                      %li= link_to raw("<i class='fa fa-edit fa-fw'></i><span class='hide-for-small'>Edit Grade</span>"), edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team_for_course(current_course)), :team => current_student.team_for_course(current_course)), :class => 'button'
+                      %li= link_to glyph(:edit) + "Edit Grade"), edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team_for_course(current_course)), :team => current_student.team_for_course(current_course)), :class => 'button'
                     - else
                       %li
                         %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
