--- a/app/views/submissions/_buttons.haml
+++ b/app/views/submissions/_buttons.haml
@@ -3,22 +3,21 @@
     %ul
       %li
         %a{:href => "#{edit_assignment_submission_path(presenter.assignment, presenter.submission)}?student_id=#{presenter.student.id}" }
-          %i.fa.fa-edit
+          = glyph(:edit)
           Edit Submission
           %span.sr-only #{presenter.student.try(:first_name)}'s Submission
       %li
-        = link_to raw("<i class='fa fa-trash fa-fw'></i> Delete Submission"), assignment_submission_path(:assignment => presenter.assignment, :submission => presenter.submission ), :data => { confirm: 'Are you sure?',  method: :delete }
+        = link_to glyph(:trash) + "Delete Submission", assignment_submission_path(:assignment => presenter.assignment, :submission => presenter.submission ), :data => { confirm: 'Are you sure?',  method: :delete }
 
-      %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(presenter.assignment, presenter.submission, :student_id => presenter.student.id)
+      %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, presenter.submission, :student_id => presenter.student.id)
 - elsif presenter.assignment.has_groups?
   .context_menu
     %ul
       %li
         %a{:href => "#{edit_assignment_submission_path(presenter.assignment, presenter.submission)}?group_id=#{presenter.group.id}" }
-          %i.fa.fa-edit
+          = glyph(:edit)
           Edit Submission
           %span.sr-only #{presenter.group.name}'s Submission
       %li
-        = link_to raw("<i class='fa fa-trash fa-fw'></i> Delete Submission"), assignment_submission_path(:assignment => presenter.assignment, :submission => presenter.submission ), :data => { confirm: 'Are you sure?',  method: :delete }
-
-      %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(presenter.assignment,  :group_id => presenter.group.id)
+        = link_to glyph(:trash) + "Delete Submission", assignment_submission_path(:assignment => presenter.assignment, :submission => presenter.submission ), :data => { confirm: 'Are you sure?',  method: :delete }
+      %li= link_to glyph(:check) + "Grade", group_grade_assignment_path(presenter.assignment,  :group_id => presenter.group.id)
