--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -38,4 +38,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, "#{presenter.submission.persisted? ? 'Update Submission' : "Submit #{term_for :assignment}"}"
-      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), assignment_path(presenter.assignment), :class => 'button'
+      %li= link_to glyph("times-circle" + "Cancel", assignment_path(presenter.assignment), :class => 'button'
