--- a/app/views/users/_submit_buttons.html.haml
+++ b/app/views/users/_submit_buttons.html.haml
@@ -1,4 +1,4 @@
 .submit-buttons
   %ul
     %li= submit_tag "#{@user.persisted? ? 'Update' : 'Create'} User", :class => "button"
-    %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), users_path, :class => 'button'
+    %li= link_to glyph("times-circle") + "Cancel", users_path, :class => 'button'
