--- a/app/views/users/_courses.html.haml
+++ b/app/views/users/_courses.html.haml
@@ -5,8 +5,8 @@
         %h4.uppercase
           = "#{cmf.object.course.courseno} #{cmf.object.course.name} #{cmf.object.course.try(:semester)} #{cmf.object.course.try(:year)} Settings"
           .right
-            = link_to raw("<i class='fa fa-check fa-fw'></i> Add user to this course"), "#", class: "button secondary #{"hidden" unless @user.role(cmf.object.course).nil?}", data: { behavior: "toggle-course-setting" }
-            = link_to raw("<i class='fa fa-times fa-fw'></i> Remove user from this course"), "#", class: "button danger #{"hidden" if @user.role(cmf.object.course).nil?}", data: { behavior: "toggle-course-setting" }
+            = link_to glyph(:check) + "Add user to this course", "#", class: "button secondary #{"hidden" unless @user.role(cmf.object.course).nil?}", data: { behavior: "toggle-course-setting" }
+            = link_to glyph(:times) + "Remove user from this course", "#", class: "button danger #{"hidden" if @user.role(cmf.object.course).nil?}", data: { behavior: "toggle-course-setting" }
         .course-setting{ class: ("hidden" if @user.role(cmf.object.course).nil?) }
           = hidden_field_tag :child_index, cmf.options[:child_index]
           = cmf.hidden_field :_destroy, value: @user.role(cmf.object.course).nil?
