--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -52,8 +52,8 @@
             .right
               %ul.button-bar
                 - if user_is_student
-                  %li= link_to raw("<i class='fa fa-dashboard fa-fw'> </i> Dashboard"), student_path(user), :class => 'button' if user_is_student
+                  %li= link_to glyph(:dashboard) + "Dashboard", student_path(user), :class => 'button' if user_is_student
                 - elsif user_is_staff
-                  %li= link_to raw("<i class='fa fa-dashboard fa-fw'> </i> Dashboard"), staff_path(user), :class => 'button' if user_is_staff
-                %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit"), edit_user_path(user), :class => 'button'
-                %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), course_membership, :class => 'button', :data => { confirm: 'This will delete the student from your course - Are you sure?' }, :method => :delete
+                  %li= link_to glyph(:dashboard) + "Dashboard", staff_path(user), :class => 'button' if user_is_staff
+                %li= link_to glyph(:edit) + "Edit", edit_user_path(user), :class => 'button'
+                %li= link_to glyph(:trash) + "Delete", course_membership, :class => 'button', :data => { confirm: 'This will delete the student from your course - Are you sure?' }, :method => :delete
