--- a/app/views/students/syllabus/_instructor_table.haml
+++ b/app/views/students/syllabus/_instructor_table.haml
@@ -63,7 +63,7 @@
             %li= link_to glyph(:eye) + "See Results", assignment_grade_path(assignment, :student_id => @student.id), :class => "button"
             - if assignment.is_individual?
               %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment.id, :student_id => @student.id), :class => 'button'
-            - if assignment.has_groups?
+            - elsif assignment.has_groups?
               %li= link_to glyph(:edit) + "Edit Grade", group_grade_assignment_path(assignment, :group_id => group), :class => 'button'
           - else
             - if assignment.is_individual?
