Styling pass fail switch

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -233,3 +233,18 @@ ul.accepts_submission_types
 input[type=text]
     padding: .5rem
     width: 15rem
+
+.switch-label
+  text-transform: capitalize
+  font-weight: bold
+  display: inline-block
+  margin-bottom: 5px
+
+.switch label
+  margin-top: 1px
+
+.pass-fail-contingent.off
+  visibility: hidden
+
+.pass-fail-grade-toggle
+  padding-bottom: 16px
