--- a/app/views/info/grading_status.html.haml
+++ b/app/views/info/grading_status.html.haml
@@ -11,4 +11,4 @@
 
   = render 'in_progress_grades_table', :course => current_course
 
-  = render 'in_limbo_grades_table', :course => current_course
+  = render 'no_status_grades_table', :course => current_course
