--- a/app/views/info/_unreleased_grades_table.haml
+++ b/app/views/info/_unreleased_grades_table.haml
@@ -37,11 +37,9 @@
             - graded_assignment = g.assignment
             - student = g.student
             - team = student.team_for_course(course)
-            - first_name = student.try(:first_name)
-            - last_name = student.try(:last_name)
             %tr
-              %td= link_to first_name, student_path(student)
-              %td= link_to last_name, student_path(student)
+              %td= link_to student.first_name, student_path(student)
+              %td= link_to student.last_name, student_path(student)
               - if graded_assignment.has_groups?
                 %td
                   - group_for_assignment = student.group_for_assignment(graded_assignment)
@@ -49,7 +47,7 @@
                     = link_to group_for_assignment.try(:name), group_path(:id => group_for_assignment)
               - if course.has_teams? && ! assignment.has_groups?
                 %td
-                  = link_to "#{team.try(:name)}", team
+                  = link_to team.name, team
 
               %td= g.try(:score)
               %td= raw g.feedback
@@ -63,7 +61,7 @@
                   %label
                     = check_box_tag "grade_ids[]", g.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-unreleased-grades-command']" }
                     .sr-only
-                      Check/Uncheck #{first_name} #{last_name}
+                      Check/Uncheck #{student.first_name} #{student.last_name}
 
       .submit-buttons
         .right
