Stacking login buttons

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -282,14 +282,16 @@ ul.subnav.logged-out
     display: none
 
   .mobile-nav
-    padding-top: .5rem
-    padding-left: .5rem
+    padding-top: .25rem
+    padding-left: .25rem
     margin: 0 auto
     text-align: center
 
     .login-buttons
-      padding-top: 0.25rem
-      padding-right: .5rem
+      padding: 0.25rem !important
+
+      .gc-login
+        padding-left: 0 !important
 
   .nav.nav-pill
     padding: 0
