Removing extra file

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -288,10 +288,8 @@ ul.subnav.logged-out
     text-align: center
 
     .login-buttons
-      padding: 0.25rem !important
-
-      .gc-login
-        padding-left: 0 !important
+      padding: .25rem 0 !important
+      margin: 0 !important
 
   .nav.nav-pill
     padding: 0
