--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -39,7 +39,7 @@ $media-xlarge-max:  120rems
   .hide-for-medium
     display: none
 
-@media (min-width: $media-medium-max)
+@media (min-width: $media-small-max)
   .hide-for-large
     display: none
 
