--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -282,7 +282,6 @@ ul.subnav.logged-out
     display: none
 
   .mobile-nav
-    padding-top: .25rem
     padding-left: .25rem
     margin: 0 auto
     text-align: center
@@ -290,6 +289,9 @@ ul.subnav.logged-out
     .login-buttons
       padding: .25rem 0 !important
       margin: 0 !important
+      a.button
+        padding-right: .2rem !important
+        font-size: .6rem
 
   .nav.nav-pill
     padding: 0
