--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -3,6 +3,7 @@ $px-3: .1875rem
 $global-radius: $px-3
 
 // Media Query Sizes
+$media-xsmall-max:  20rem
 $media-small-max:   50rem // 640px
 $media-medium-max:  63rem // 1024px
 $media-large-max:   90rem // 1440px
@@ -31,6 +32,10 @@ $media-xlarge-max:  120rems
   /* Good browsers */
   opacity: $opacity
 
+@media (max-width: $media-xsmall-max)
+  .hide-for-xsmall
+    display: none
+
 @media (max-width: $media-small-max)
   .hide-for-small
     display: none
@@ -39,7 +44,7 @@ $media-xlarge-max:  120rems
   .hide-for-medium
     display: none
 
-@media (min-width: $media-small-max)
+@media (min-width: $media-medium-max)
   .hide-for-large
     display: none
 
