--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,6 +1,7 @@
 .homepage
   .alert-bkg= render 'layouts/alerts'
   .hero-section
+    .hide-for-medium.hide-for-large.center= image_tag "gradecraft_logo.png", :width => "180"
     %h1.center A learning management system that supports gameful courses
     %h3.center Encourage students to focus on the craft of learning
   .feature-section.white.gameful
