--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -16,6 +16,7 @@
   white-space: nowrap
   font-weight: normal
   font-family: 'Standard-Weight'
+  -webkit-appearance: none
 
   &:hover
     background-color: darken($color-blue-3, 10%) !important
@@ -105,7 +106,7 @@ tbody
       &:first-child .button
         border-top-left-radius: $global-radius
         border-bottom-left-radius: $global-radius
-        
+
       &:last-child .button
         border-top-right-radius: $global-radius
         border-bottom-right-radius: $global-radius
