--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -37,7 +37,7 @@
     height: auto
 
   .feature-section
-    padding: 40px
+    padding: 2rem 2rem 4rem
 
     &.white
       background-color: $color-white
