padding on homepage paragraphs

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -47,9 +47,9 @@
 
     /* Gameful features itemized on the homepage */
     .feature
-      width: 90%
+      width: 95%
       height: auto !important
-      padding: 0 1.5rem
+      padding: 0 .75rem
       margin-bottom: 1rem
 
     p
@@ -142,6 +142,7 @@ a.outline-button
 
     .section-container
       padding: 0 !important
+      margin: 0 !important
 
     .gameful
       h2
@@ -153,7 +154,7 @@ a.outline-button
       padding: 0
 
     .feature
-      text-align: center !important
+      text-align: center
       clear: both
       padding: 0 !important
       margin-bottom: 2rem !important
@@ -169,10 +170,11 @@ a.outline-button
         width: 100%
 
       p
-        line-height: 1.75rem
+        line-height: 1.25rem
+        margin: 0 1.25rem !important
 
     .feature-section
-      padding: 0 0 3rem!important
+      padding: 0 0 3rem !important
 
       h2
         padding: 1rem .25rem 0
