Adds rubric grading functionality to group assignments
  * extends the current functionality for grading with a rubric to assignments with groups
  * adds a helper #grade_with_rubric? to assignment model
  * refactor Angular controller for rubric grading
    * reduce the dependencies on outer modules
    * remove call to Angular controller init from haml
    * DRY up grade status logic ["In Progress", "Graded", etc.]
    * push all API calls into service
  * adds rubric params to views for grade show and edit pages.
    * _NOTE:_ we may need to add rubric details to some additional grade view pages, but summary grade and comments should work everywhere.
  * moves rubric form submission into from grades controller to api/criterion_grades
  * update rubocop config
  * adds group to spec world helper

--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -61,3 +61,6 @@
           - if presenter.grade_for(student).feedback.present?
             %p.bold Instructor Feedback:
             %p= raw presenter.grade_for(student).feedback
+
+  - if presenter.rubric_designed?
+    .rubric-container= render partial: 'grades/criterion_grade_results', locals: { presenter: presenter }
