--- a/app/views/assignment_types/index.html.haml
+++ b/app/views/assignment_types/index.html.haml
@@ -7,7 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  %table.responsive.nofeatures_dynatable{"aria-describedby" => "tableCaption"}
+  %table.responsive.nopage_dynatable{"aria-describedby" => "tableCaption"}
     %thead
       %tr
         %th{:scope => "col"} Name
@@ -57,9 +57,9 @@
           %td= link_to student.first_name, student_path(student)
           %td= link_to student.last_name, student_path(student)
           - @assignment_types.each do |at|
-            %td= at.visible_score_for_student(student)
+            %td= points at.visible_score_for_student(student)
             - if at.student_weightable?
-              %td= at.raw_score_for_student(student)
+              %td= points at.raw_score_for_student(student)
               %span.sr-only= at.name
 
   %h4.subtitle= "#{term_for :student} Grade Counts"
@@ -79,5 +79,5 @@
           %td= link_to student.first_name, student_path(student)
           %td= link_to student.last_name, student_path(student)
           - @assignment_types.each do |at|
-            %td= at.grades.where(:student_id => student.id).graded_or_released.count
-            %td= "#{at.grades.where(:student_id => student.id).graded_or_released.positive.count }"
+            %td= points at.grades.where(:student_id => student.id).graded_or_released.count
+            %td= points "#{at.grades.where(:student_id => student.id).graded_or_released.positive.count }"
