--- a/app/views/info/_students_table.haml
+++ b/app/views/info/_students_table.haml
@@ -15,7 +15,7 @@
       %tr
         %td= link_to student.name, student_path(student)
         %td= points student.cached_score_for_course(current_course)
-        %td= points student.grade_for_course(current_course).name
+        %td= points student.grade_for_course(current_course).try(:name)
 
         - if course.has_badges?
           %td= student.earned_badges.count
